# calcex

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
detail/: Calculator.cpp  Calculator.h  Parser.cpp  Parser.h  Token.h  Tokenizer.h
detail/parser/: Parser.cpp  Parser.h  Tree.h
detail/tokenizer/: AutomaticTokenizer.cpp  AutomaticTokenizer.h  Token.h  Tokenizer.cpp  Tokenizer.h  TokenizerInterface.h
